--- a/cliff_walking.ipynb
+++ b/cliff_walking.ipynb
@@ -232,14 +232,13 @@
     "\n",
     "    def reward(self, state):\n",
     "        if state in self.cliffs:\n",
-    "            return -100\n",
+    "            return -20\n",
     "        elif state == (3, 11):\n",
-    "            return 500\n",
+    "            return 100\n",
     "        else:\n",
-    "            return -1\n",
+    "            return -10\n",
     "\n",
     "    def update_QV(self):\n",
-    "        print(\"start QV update\")\n",
     "        di = [-1, 0, 1, 0]\n",
     "        dj = [0, 1, 0, -1]\n",
     "        for i in range(4):\n",
@@ -250,27 +249,24 @@
     "                        if k != action and action%2 == k%2:\n",
     "                            continue\n",
     "                        next_state = [i+di[action], j+dj[action]]\n",
-    "                        #self.Q[i, j, k] += (1/3*( self.reward(next_state) + self.gama*self.V[next_state]))\n",
+    "                        if next_state[0] >= 4 or next_state[1] >= 12:\n",
+    "                            continue\n",
+    "                        self.Q[i, j, k] = self.Q[i, j, k] + (1/3*( self.reward(next_state) + self.gama*self.V[next_state[0], next_state[1]]))\n",
     "                        \n",
     "\n",
     "                    \n",
     "        for i in range(4):\n",
     "            for j in range(12):\n",
-    "                self.V[i, j] = 0\n",
-    "                for k in range(4):\n",
-    "                    self.V[i, j] = max(self.Q[i, j, k], self.V[i, j])\n",
+    "                self.V[i, j] = max(self.Q[i, j, ])\n",
     "        self.tmp_V = self.V\n",
-    "        print(\"done QV update\")\n",
     "                    \n",
     "                    \n",
     "    def update_pi(self):\n",
-    "        print(\"start pi update\")\n",
     "        for i in range(4):\n",
     "            for j in range(12):\n",
     "                for action in [UP, RIGHT, DOWN, LEFT]:\n",
     "                    if self.Q[i, j, action] == self.V[i, j]:\n",
     "                        self.pi[i, j] = action\n",
-    "        print(\"done pi update\")\n",
     "\n",
     "\n",
     "\n",
@@ -290,8 +286,8 @@
     "\n",
     "            iter_cnt += 1\n",
     "        self.update_pi()\n",
+    "        print(self.pi)\n",
     "\n",
-    "        print(self.pi, self.Q, self.V)\n",
     "            \n",
     "    def policy(self, state):\n",
     "        return self.pi[state[0], state[1]]\n",
@@ -303,390 +299,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start QV update\n",
-      "done QV update\n",
-      "start QV update\n",
-      "done QV update\n",
-      "start QV update\n",
-      "done QV update\n",
-      "start QV update\n",
-      "done QV update\n",
-      "start QV update\n",
-      "done QV update\n",
-      "start QV update\n",
-      "done QV update\n",
-      "start QV update\n",
-      "done QV update\n",
-      "start QV update\n",
-      "done QV update\n",
-      "start QV update\n",
-      "done QV update\n",
-      "start QV update\n",
-      "done QV update\n",
-      "start QV update\n",
-      "done QV update\n",
-      "start QV update\n",
-      "done QV update\n",
-      "start QV update\n",
-      "done QV update\n",
-      "start QV update\n",
-      "done QV update\n",
-      "start QV update\n",
-      "done QV update\n",
-      "start QV update\n",
-      "done QV update\n",
-      "start QV update\n",
-      "done QV update\n",
-      "start QV update\n",
-      "done QV update\n",
-      "start QV update\n",
-      "done QV update\n",
-      "start QV update\n",
-      "done QV update\n",
-      "start pi update\n",
-      "done pi update\n",
-      "[[3 3 3 3 3 3 3 3 3 3 3 3]\n",
-      " [3 3 3 3 3 3 3 3 3 3 3 3]\n",
-      " [3 3 3 3 3 3 3 3 3 3 3 3]\n",
-      " [3 3 3 3 3 3 3 3 3 3 3 3]] [[[0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]]\n",
-      "\n",
-      " [[0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]]\n",
-      "\n",
-      " [[0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]]\n",
-      "\n",
-      " [[0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]\n",
-      "  [0. 0. 0. 0.]]] [[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n",
-      "(3, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(0, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(0, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(0, 0)\n",
-      "3\n",
-      "(0, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(0, 0)\n",
-      "3\n",
-      "(0, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(0, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(0, 0)\n",
-      "3\n",
-      "(0, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(0, 0)\n",
-      "3\n",
-      "(0, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(0, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(0, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(0, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(0, 0)\n",
-      "3\n",
-      "(0, 0)\n",
-      "3\n",
-      "(0, 0)\n",
-      "3\n",
-      "(0, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(0, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(0, 0)\n",
-      "3\n",
-      "(0, 0)\n",
-      "3\n",
-      "(0, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(3, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(0, 0)\n",
-      "3\n",
-      "(0, 0)\n",
-      "3\n",
-      "(0, 0)\n",
-      "3\n",
-      "(1, 0)\n",
-      "3\n",
-      "(2, 0)\n",
-      "3\n"
+      "[[3 0 0 0 0 0 0 0 0 0 1 1]\n",
+      " [3 3 3 3 3 3 1 1 1 1 1 1]\n",
+      " [3 2 2 2 2 2 2 2 2 2 1 1]\n",
+      " [2 2 2 2 2 2 2 2 2 2 2 1]]\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n",
+      "2\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 17\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(action)\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m# Perform the action and receive feedback from the environment\u001b[39;00m\n\u001b[0;32m---> 17\u001b[0m next_state, reward, done, truncated, info \u001b[38;5;241m=\u001b[39m \u001b[43menv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstep\u001b[49m\u001b[43m(\u001b[49m\u001b[43maction\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     18\u001b[0m current_state \u001b[38;5;241m=\u001b[39m (next_state\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m12\u001b[39m, next_state\u001b[38;5;241m%\u001b[39m\u001b[38;5;241m12\u001b[39m)\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m done \u001b[38;5;129;01mor\u001b[39;00m truncated:\n",
+      "Cell \u001b[0;32mIn[2], line 92\u001b[0m, in \u001b[0;36mCliffWalking.step\u001b[0;34m(self, action)\u001b[0m\n\u001b[1;32m     89\u001b[0m         \u001b[38;5;28;01mcase\u001b[39;00m \u001b[38;5;241m3\u001b[39m:\n\u001b[1;32m     90\u001b[0m             action \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mchoice([\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m], p\u001b[38;5;241m=\u001b[39m[\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m1\u001b[39m \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m1\u001b[39m \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m3\u001b[39m])\n\u001b[0;32m---> 92\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstep\u001b[49m\u001b[43m(\u001b[49m\u001b[43maction\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.local/lib/python3.11/site-packages/gymnasium/envs/toy_text/cliffwalking.py:181\u001b[0m, in \u001b[0;36mCliffWalkingEnv.step\u001b[0;34m(self, a)\u001b[0m\n\u001b[1;32m    178\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlastaction \u001b[38;5;241m=\u001b[39m a\n\u001b[1;32m    180\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mrender_mode \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhuman\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m--> 181\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrender\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    182\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m (\u001b[38;5;28mint\u001b[39m(s), r, t, \u001b[38;5;28;01mFalse\u001b[39;00m, {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mprob\u001b[39m\u001b[38;5;124m\"\u001b[39m: p})\n",
+      "File \u001b[0;32m~/.local/lib/python3.11/site-packages/gymnasium/envs/toy_text/cliffwalking.py:206\u001b[0m, in \u001b[0;36mCliffWalkingEnv.render\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    204\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_render_text()\n\u001b[1;32m    205\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 206\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_render_gui\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrender_mode\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[2], line 177\u001b[0m, in \u001b[0;36mCliffWalking._render_gui\u001b[0;34m(self, mode)\u001b[0m\n\u001b[1;32m    175\u001b[0m     pygame\u001b[38;5;241m.\u001b[39mevent\u001b[38;5;241m.\u001b[39mpump()\n\u001b[1;32m    176\u001b[0m     pygame\u001b[38;5;241m.\u001b[39mdisplay\u001b[38;5;241m.\u001b[39mupdate()\n\u001b[0;32m--> 177\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mclock\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtick\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmetadata\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrender_fps\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    178\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:  \u001b[38;5;66;03m# rgb_array\u001b[39;00m\n\u001b[1;32m    179\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39mtranspose(\n\u001b[1;32m    180\u001b[0m         np\u001b[38;5;241m.\u001b[39marray(pygame\u001b[38;5;241m.\u001b[39msurfarray\u001b[38;5;241m.\u001b[39mpixels3d(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwindow_surface)), axes\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m    181\u001b[0m     )\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -703,7 +518,6 @@
     "    # Note: .sample() is used to sample random action from the environment's action space\n",
     "\n",
     "    # Choose an action (Replace this random action with your agent's policy)\n",
-    "    print(current_state)\n",
     "    action = mdp.policy(current_state)\n",
     "    print(action)\n",
     "\n",
