--- a/cliff_walking.ipynb
+++ b/cliff_walking.ipynb
@@ -303,18 +303,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "^ ^ ^ < ^ > ^ ^ ^ ^ ^ > \n",
-      "^ > ^ < ^ > > < ^ < ^ > \n",
-      "V < ^ > < ^ > V V ^ V < \n",
-      "< ^ V V V V V V < ^ > ^ \n",
-      "\n"
+      "< ^ ^ > < ^ > > > > ^ > \n",
+      "< V V > ^ < ^ > > < ^ > \n",
+      "< < ^ < ^ > V ^ > < ^ > \n",
+      "< V V V < ^ < ^ > ^ V ^ \n",
+      "\n",
+      "Wins = 0\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -322,7 +331,7 @@
     "# Define the maximum number of iterations\n",
     "max_iter_number = 1000\n",
     "iter_of_mdp = 1000\n",
-    "gama = 0.9\n",
+    "gama = 0.9999\n",
     "current_state = (3, 0)\n",
     "wins = 0\n",
     "\n",
