--- a/cliff_walking.ipynb
+++ b/cliff_walking.ipynb
@@ -221,7 +221,7 @@
    "outputs": [],
    "source": [
     "class MDP:\n",
-    "    def __init__(self, max_iterations, discount_factor, cliff_positions):\n",
+    "    def init(self, max_iterations, discount_factor, cliff_positions):\n",
     "        self.tmp_V = np.zeros((4, 12))\n",
     "        self.V = np.zeros((4, 12))\n",
     "        self.Q = np.zeros((4, 12, 4))\n",
@@ -229,14 +229,6 @@
     "        self.max_iter = max_iterations\n",
     "        self.gama = discount_factor\n",
     "        self.cliffs = cliff_positions\n",
-    "\n",
-    "    def reward(self, state):\n",
-    "        if tuple(state) in self.cliffs:\n",
-    "            return -100\n",
-    "        elif tuple(state) == (3, 11):\n",
-    "            return 10000\n",
-    "        else:\n",
-    "            return -1\n",
     "\n",
     "    def update_QV(self):\n",
     "        di = [-1, 0, 1, 0]\n",
@@ -250,9 +242,9 @@
     "                            continue\n",
     "                        next_state = (i+di[action], j+dj[action])\n",
     "                        if next_state[0] >= 4 or next_state[1] >= 12 or next_state[0] < 0 or next_state[1] < 0:\n",
-    "                            self.Q[i, j, k] += -10/3\n",
+    "                            self.Q[i, j, k] += -1/3\n",
     "                            continue\n",
-    "                        self.Q[i, j, k] = self.Q[i, j, k] + (1/3*( (-10) + self.gama*self.V[next_state[0], next_state[1]]))\n",
+    "                        self.Q[i, j, k] = self.Q[i, j, k] + (1/3*((-1) + self.gama*self.V[next_state[0], next_state[1]]))\n",
     "                        \n",
     "         \n",
     "        for i in range(4):\n",
@@ -262,7 +254,7 @@
     "                if (i, j) in self.cliffs:\n",
     "                    continue\n",
     "                self.V[i, j] = max(self.Q[i, j])\n",
-    "                    \n",
+    "                \n",
     "                    \n",
     "    def update_pi(self):\n",
     "        for i in range(4):\n",
@@ -270,23 +262,18 @@
     "                for action in [UP, RIGHT, DOWN, LEFT]:\n",
     "                    if self.Q[i, j, action] == self.V[i, j]:\n",
     "                        self.pi[i, j] = action\n",
-    "\n",
-    "\n",
-    "\n",
-    "    def check_convergence(self):\n",
-    "        return self.tmp_V.all() == self.V.all()\n",
+    "                        \n",
     "\n",
     "    def run(self):\n",
-    "        iter_cnt = 0\n",
-    "        \n",
     "        self.V[3, 11] = 1000\n",
     "        for ci, cj in self.cliffs:\n",
     "            self.V[ci, cj] = -100\n",
     "            \n",
+    "        iter_cnt = 0\n",
     "        while iter_cnt < self.max_iter:\n",
     "            self.update_QV()\n",
-    "            self.update_pi()\n",
     "            iter_cnt += 1\n",
+    "        self.update_pi()\n",
     "            \n",
     "    def policy(self, state):\n",
     "        return self.pi[state[0], state[1]]\n",
@@ -297,6 +284,13 @@
     "            for j in range(12):\n",
     "                print(direction[self.\n",
     "                      pi[i, j]], end=\" \")\n",
+    "            print()\n",
+    "        print()\n",
+    "\n",
+    "    def print_v(self):\n",
+    "        for i in range(4):\n",
+    "            for j in range(12):\n",
+    "                print(round(self.V[i, j], 2), end=\"\\t\")\n",
     "            print()\n",
     "        print()"
    ]
