add some prints

--- a/cliff_walking.ipynb
+++ b/cliff_walking.ipynb
@@ -332,6 +332,7 @@
     "mdp = MDP(iter_of_mdp, gama, env.cliff_positions)\n",
     "mdp.run()\n",
     "mdp.print_pi()\n",
+    "mdp.print_v()\n",
     "\n",
     "for __ in range(max_iter_number):\n",
     "    try:\n",
